# adk-samples2

./: academic-research.wdf.yaml  adk-ae-oauth.wdf.yaml  agent-observability-bq.wdf.yaml  agent-skills-tutorial.wdf.yaml  ai-security-agent.wdf.yaml  airflow-version-upgrade-agent.wdf.yaml  ambient-expense-agent.wdf.yaml  antom-payment.wdf.yaml  auto-insurance-agent.wdf.yaml  blog-writer.wdf.yaml  brand-aligned-presentations.wdf.yaml  brand-aligner.wdf.yaml  brand-search-optimization.wdf.yaml  camel.wdf.yaml  claim-adjudication-agent.wdf.yaml  currency-agent.wdf.yaml  customer-service.wdf.yaml  cyber-guardian-agent.wdf.yaml  data-engineering.wdf.yaml  earth-engine-geospatial.wdf.yaml  economic-research-agent.wdf.yaml  financial-advisor.wdf.yaml  fomc-research.wdf.yaml  fun-facts.wdf.yaml  gemma-food-tour-guide.wdf.yaml  genmedia-for-commerce.wdf.yaml  global-kyc-agent.wdf.yaml  google-trends-agent.wdf.yaml  hierarchical-workflow-automation.wdf.yaml  high-volume-document-analyzer.wdf.yaml  image-scoring.wdf.yaml  incident-management.wdf.yaml  invoice-processing.wdf.yaml  llm-auditor.wdf.yaml  marketing-agency.wdf.yaml  medical-pre-authorization.wdf.yaml  memory-bank.wdf.yaml  nexshift-agent.wdf.yaml  nurse-handover.wdf.yaml  on-brand-genmedia.wdf.yaml  (+21 more)
.github/workflows/: dependabot-auto-merge.yml  gemini-issue-automated-triage.yml  gemini-pr-review.yml  ruff-checks.yml  test_templated_agent.yaml
go/agents/sail-researcher/: Dockerfile
go/agents/sail-researcher/tdf/: gcp-us-central.tdf.yaml
go/agents/sail-researcher/wdf/: sail-researcher.wdf.yaml
python/agents/agent-skills-tutorial/: Dockerfile
python/agents/ai-security-agent/profile_data/: qa_profile_data.jsonl
python/agents/ai-security-agent/sla/: operating_sla.yaml  sla_manifest.yaml
python/agents/ai-security-agent/tdf/: ai-security-agent-gcp-us-central.tdf.yaml  gcp-us-central.tdf.yaml
python/agents/ai-security-agent/wdf/: ai-security-agent.wdf.yaml
python/agents/airflow_version_upgrade_agent/: .dockerignore
python/agents/blog-writer/: pyproject.toml  requirements.txt
python/agents/blog-writer/profile_data/: qa_profile_data.jsonl
python/agents/blog-writer/sla/: operating_sla.yaml  sla_manifest.yaml
python/agents/brand-aligned-presentations/: Dockerfile
python/agents/customer-service/: pyproject.toml
python/agents/deep-search/: pyproject.toml
python/agents/image-scoring/: pyproject.toml
python/agents/llm-auditor/: Dockerfile
python/agents/medical-pre-authorization/: pyproject.toml
python/agents/podcast_transcript_agent/: pyproject.toml
python/agents/realtime-conversational-agent/server/: pyproject.toml
python/agents/software-bug-assistant/: pyproject.toml
python/agents/story_teller/: .dockerignore  Dockerfile
python/agents/travel-concierge/: pyproject.toml
(+21 files in other folders)
