[project]
name = "medical-pre-authorization"
version = "0.1.0"
description = "Medical pre-authorization agent using ADK for document processing and evaluation"
authors = [
    {name = "Dipali Agarwal", email = "agarwaldipali@google.com"}
]
license = {text = "Apache License 2.0"}
readme = "README.md"
requires-python = ">=3.12,<4"

dependencies = [
    "google-adk>=1.13.0,<2.0.0",
    "google-genai>=1.32.0,<2.0.0",
    "google-cloud>=0.34.0,<0.35.0",
    "pdfplumber>=0.11.10,<0.12.0",
    "google-cloud-aiplatform>=1.158.0,<2.0.0",
    "reportlab>=5.0.0,<6.0.0",
    "google-cloud-storage>=3.12.0",
    "pymupdf>=1.27.2.3,<2.0.0",
]

[dependency-groups]
dev = [
    "google-cloud-aiplatform[adk,agent-engines,evaluation]>=1.158.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "google-adk[eval]>=1.5.0",
    "agent-starter-pack>=0.41.3",

]
deployment = [
    "absl-py>=2.2.1",
]

[tool.ruff]
extend = "../../../pyproject.toml"

[tool.ruff.lint]
ignore = ["C901"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.isort]
known-first-party = ["medical_pre_authorization"]

[tool.pytest.ini_options]
pythonpath = "."
filterwarnings = [
  "ignore::DeprecationWarning",
  "ignore:Using `@model_validator`.*:pydantic.warnings.PydanticDeprecatedSince210",


]

[tool.agent-starter-pack.settings]
agent_directory = "medical_pre_authorization"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"