[project]
name = "realtime-conversational-agent-server"
version = "0.1.0"
description = "Example application using the Gemini Live API and ADK."
authors = [
    {name = "Stephen Allen", email = "stephenaallen@google.com"}
]
license = {text = "Apache License 2.0"}
requires-python = ">=3.11"

dependencies = [
    "pydantic>=2.13.4",
    "python-dotenv>=1.1.1",
    "uvicorn>=0.49.0",
    "fastapi>=0.138.0",
    "google-genai>=2.9.0",
    "google-adk>=1.14.1",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.18",
    "agent-starter-pack>=0.41.3",
]

[tool.ruff]
# Point back to the Master template in the root
extend = "../../../../pyproject.toml"

[tool.ruff.lint]
ignore = ["C901", "PLR0912"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.isort]
known-first-party = ["example_agent"]

[tool.agent-starter-pack]
example_question = "Help me solve a quadratic equation"

[tool.agent-starter-pack.settings]
agent_directory = "example_agent"

[tool.hatch.build.targets.wheel]
packages = ["example_agent"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"